# sdkwork-agentstudio

./: .env.development  .env.example  .env.production  .env.test  .gitignore  AGENTS.md  Cargo.toml  LICENSE-COMMERCIAL.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork-run-node.cmd  sdkwork-run-pnpm.cmd  sdkwork.app.config.json  sdkwork.workflow.json  tauri-dev-fast.cmd
.github/workflows/: ci.yml  release-reusable.yml  release.yml
.sdkwork/: README.md
apis/: README.md
apis/schemas/: sdkwork-common.yaml
apps/sdkwork-agentstudio-pc/: README.md  tsconfig.base.json
apps/sdkwork-claw-studio-pc/: README.md
apps/sdkwork-clawstudio-pc/: README.md
architect/: architect-standard-react+tauri.md  migration-react-tauri-2026-03-09.md  openclaw-directory-standard.md
config/: shared-sdk-release-sources.json
config/kernel-releases/: hermes.json  openclaw.json
crates/sdkwork-api-agentstudio-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-agentstudio-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-agentstudio-assembly/src/: bootstrap.rs  lib.rs
crates/sdkwork-api-agentstudio-standalone-gateway/: Cargo.toml
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/drift/: policy.yaml
database/seeds/: seed.manifest.json
deploy/docker/: .dockerignore  Dockerfile  README.md  docker-compose.amd-rocm.yml  docker-compose.nvidia-cuda.yml  docker-compose.yml
deploy/kubernetes/: Chart.yaml  README.md  values.yaml
deploy/profiles/: cloud.production.env  standalone.development.env
deployments/: deploy.yaml
docs/: INDEX.yaml  README.md  index.md
docs/.vitepress/: searchIndexPolicy.mjs  siteConfig.mjs
docs/contributing/: index.md
docs/core/: architecture.md  desktop-template.md  desktop.md  packages.md  release-and-deployment.md
docs/features/: overview.md
docs/guide/: application-modes.md  development.md  getting-started.md  install-and-deploy.md  openclaw-upgrade.md
docs/plans/: 2026-03-15-claw-studio-v5-web-tauri-migration-audit.md  2026-03-19-crawstudio-packaged-install-layout-design.md  2026-03-19-crawstudio-packaged-install-layout-implementation-plan.md
docs/prompts/: 反复执行Step指令.md
docs/reference/: api-reference.md  claw-rollout-api.md  claw-server-runtime.md  commands.md  environment.md  upstream-integration.md
docs/release/: release-2026-04-07-04.md  release-2026-04-07-05.md  release-2026-04-07-06.md  release-2026-04-07-07.md  release-2026-04-07-09.md  release-2026-04-07-10.md  release-2026-04-07-11.md  release-2026-04-07-12.md  release-2026-04-07-13.md  release-2026-04-08-01.md  release-2026-04-08-02.md  release-2026-04-08-04.md  release-2026-04-08-05.md  release-2026-04-08-06.md  release-2026-04-08-07.md  release-2026-04-08-08.md  release-2026-04-08-09.md  release-2026-04-08-10.md  release-2026-04-08-11.md  release-2026-04-08-12.md  release-2026-04-08-14.md  release-2026-04-08-15.md  release-2026-04-08-16.md  release-2026-04-08-18.md  release-2026-04-08-19.md  release-2026-04-08-20.md  release-2026-04-08-21.md  release-2026-04-08-22.md  release-2026-04-08-23.md  release-2026-04-08-24.md  release-2026-04-08-25.md  release-2026-04-08-26.md  release-2026-04-08-27.md  release-2026-04-08-28.md  release-2026-04-08-29.md  release-2026-04-08-30.md  release-2026-04-08-31.md  release-2026-04-08-32.md  release-2026-04-08-33.md  release-2026-04-08-34.md  (+149 more)
docs/reports/: 2026-04-05-chat-openclaw-regression-report.md  2026-04-05-openclaw-backend-only-task-routing-followup.md  2026-04-05-openclaw-host-and-installer-review.md  2026-04-05-unified-deployment-architecture-current-review.md  2026-04-05-unified-rust-host-deployment-bootstrap-review.md  2026-04-05-unified-rust-host-deployment-bootstrap-smoke.md  2026-04-05-unified-rust-host-kernel-contract-gaps-review.md  2026-04-05-unified-rust-host-kernel-followup-review.md  2026-04-05-unified-rust-host-kernel-review-continuation.md  2026-04-05-unified-rust-host-runtime-hardening-smoke.md  unified-deployment-architecture-audit-2026-04-05.md
docs/review/: 2026-04-06-cross-workspace-typescript-loader-hardening.md  (+193 more)
etc/: sdkwork-api-cloud-gateway.agentstudio.development.toml  sdkwork-api-cloud-gateway.agentstudio.production.toml  sdkwork.deployment.config.json
scripts/: app-sdk-user-center-storage-contract.test.ts  apply-openclaw-upgrade.mjs  apply-openclaw-upgrade.test.mjs  assert-openclaw-runtime-layout.mjs  assert-openclaw-runtime-layout.test.mjs  browser-persistence-policy-contract.test.mjs  cargo-command-standards.mjs  cargo-command-standards.test.mjs  check-arch-boundaries.mjs  check-desktop-platform-foundation.mjs  check-desktop-platform-foundation.test.mjs  check-i18n-contract.mjs  check-release-closure.mjs  check-sdkwork-agentstudio-hosts.mjs  check-sdkwork-agentstudio-route-surface.mjs  check-sdkwork-agentstudio-structure.mjs  check-sdkwork-clawstudio-hosts.mjs  check-sdkwork-clawstudio-route-surface.mjs  check-sdkwork-clawstudio-structure.mjs  check-server-platform-foundation.mjs  check-shared-sdk-release-parity.mjs  check-tailwind-feature-styles.mjs  check-web-performance-budget.mjs  check-web-performance-budget.test.mjs  ci-flow-contract.test.mjs  client-secret-boundary-contract.test.mjs  control-plane-cors-auth-contract.test.mjs  date-input-contract.test.ts  desktop-cargo-target.mjs  desktop-cargo-target.test.mjs  desktop-component-catalog-boundary.test.mjs  desktop-hosted-runtime-regression-contract.test.mjs  desktop-kernel-template-contract.test.mjs  desktop-local-ai-proxy-contract.test.mjs  desktop-process-kernel-contract.test.mjs  desktop-storage-driver-contract.test.mjs  desktop-window-chrome-contract.test.mjs  ensure-native-rust-toolchain.mjs  ensure-native-rust-toolchain.test.mjs  ensure-tauri-dev-binary-unlocked.mjs  (+110 more)
specs/: README.md  component.spec.json  topology.spec.json
types/: sdkwork-core-pc-react-app.d.ts  sdkwork-core-pc-react-env.d.ts  sdkwork-core-pc-react-runtime.d.ts  sdkwork-core-pc-react-shared.d.ts  sdkwork-pc-react-shims.d.ts
(+791 files in other folders)
