[workspace]
resolver = "2"
members = [
    "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-host-core/src-host",
    "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-host-studio/src-host",
    "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-server/src-host",
    "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-desktop/src-tauri",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# SDKWork workspace members - declared once at workspace root
sdkwork-clawstudio-host-core = { path = "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-host-core/src-host" }
sdkwork-clawstudio-host-studio = { path = "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-host-studio/src-host" }
sdkwork-clawstudio-server = { path = "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-server/src-host" }
sdkwork-clawstudio-desktop = { path = "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-desktop/src-tauri" }
sdkwork-local-api-proxy-native = { path = "../sdkwork-local-router/apps/sdkwork-local-router-pc/packages/sdkwork-local-api-proxy/native/tauri-rust" }

# SDKWork platform framework crates (sdkwork-web-framework)
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }

# SDKWork cross-language utility library (serde_int64, crypto, http_api, etc.)
# API_SPEC §13 int64-as-string is enforced through this crate.
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }

# SDKWork database framework (lifecycle, SPI, sqlx)
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }

# Pin time to a version compatible with cookie 0.18.x (used by axum-extra).
# time 0.3.38+ changed the parse() method signature, breaking cookie 0.18.1.
time = "=0.3.37"

[patch.crates-io]
# xcap vendor patch — must be at workspace root per Cargo requirements.
xcap = { path = "apps/sdkwork-clawstudio-pc/packages/sdkwork-clawstudio-desktop/src-tauri/vendor/xcap" }
