[package]
name = "sdkwork-api-agentstudio-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-agentstudio application HTTP plane."

[lib]
name = "sdkwork_api_agentstudio_assembly"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
